Work/rick-developer.com/work/sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

02-12-2016 07:46:
D:\Web-dev\Portfolio\Paymentwall\.sublime-gulp-tmp.js:16
	gulp.watch('./pre-css/*.css',);
	                             ^

SyntaxError: Unexpected token )
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:387:25)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Module.require (module.js:367:17)
    at require (internal/module.js:16:19)
    at requireGulp (C:\Users\rikar\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\rikar\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:413:34)
